AI-86: Fix activities tab issues

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/_variables.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/_variables.scss
@@ -17,3 +17,7 @@ $crm-blue-light: #58b7d1;
 $crm-cancel-color: #555;
 
 $font-family-fontawesome: 'FontAwesome';
+
+$crm-min-width: 1005px;
+$crm-max-width: 1504px;
+$crm-min-lg-width: 1505px;
