AI-87: Fix contact record relationships tab issues

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_tooltip.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_tooltip.scss
@@ -4,6 +4,7 @@
   .crm-tooltip {
     @extend %block-with-shadow;
     background: $crm-dark-blue !important;
+    border-radius: $border-radius-base;
 
     .content,
     .crm-table-group-summary tr td,
