--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/_variables.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/_variables.scss
@@ -13,8 +13,11 @@ $crm-form-layout-shadow: 0 3px 18px 0 rgba(48, 40, 40, 0.25);
 $crm-contribute-form-shadow: 0 0 16px 1px rgba(0, 0, 0, 0.1);
 $crm-input-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.2) inset;
 
+$black-olive-color: #3E3E3E;
 $crm-blue-light: #58b7d1;
 $crm-cancel-color: #555;
+$green-color: #B0D730;
+$light-green-color: #F1F8EB;
 
 $font-family-fontawesome: 'FontAwesome';
 
