AI-87: Fix suggested issues in PR

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_relationships.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_relationships.scss
@@ -138,10 +138,10 @@
     }
 
     .description {
-      background-color: $light-green-color;
-      border: 1px solid $green-color;
+      background-color: $crm-light-green-color;
+      border: 1px solid $crm-green-color;
       border-radius: $border-radius-child;
-      color: $black-olive-color;
+      color: $crm-black-olive-color;
       font-size: $font-size-base;
       margin: 0 0 8px;
       padding: 4px;
