--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/_variables.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/_variables.scss
@@ -9,6 +9,7 @@ $select2-inner-background: #f1f5f6;
 $contact-avatar: 90px;
 
 $crm-checkbox-shadow: inset 0 0 3px 0 rgba(0, 0, 0, 0.2);
+$crm-form-item-shadow: 0 3px 6px 0 rgba(48, 40, 40, 0.25);
 $crm-form-layout-shadow: 0 3px 18px 0 rgba(48, 40, 40, 0.25);
 $crm-contribute-form-shadow: 0 0 16px 1px rgba(0, 0, 0, 0.1);
 $crm-input-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.2) inset;
@@ -24,3 +25,4 @@ $font-family-fontawesome: 'FontAwesome';
 $crm-min-width: 1005px;
 $crm-max-width: 1504px;
 $crm-min-lg-width: 1505px;
+$crm-sm-th-width: 200px;
