--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_change-log.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_change-log.scss
@@ -1,22 +1,60 @@
 #changeLog {
   & > div.bold {
-    padding: 20px;
-    margin-bottom: 20px;
     background: $gray-lighter;
-    color: $gray-darker;
-    font-size: $font-size-h2;
-    font-family: $font-family-base;
     border-bottom: 1px solid $crm-background;
+    border-top-left-radius: $border-radius-base;
+    border-top-right-radius: $border-radius-base;
     box-shadow: $box-shadow;
+    color: $gray-darker;
+    font: $headings-font-weight $font-size-h2 $font-family-base;
+    padding: 20px;
+  }
+
+  > p {
+      margin: 0;
+  }
+
+  .form-item {
+    border-radius: $border-radius-base;
+    box-shadow: $crm-form-item-shadow;
+    padding: 0;
   }
 
   table {
+    border-radius: $border-radius-base;
+    box-shadow: none !important;
     @include mx-expandable-table();
 
     .columnheader {
       th {
-        padding: 15px 30px !important;
+        padding: 10px 20px !important;
+        text-transform: capitalize;
+
+        &:first-child {
+          width: $crm-sm-th-width;
+        }
       }
+    }
+
+    tbody tr {
+      td {
+        padding: 10px 20px;
+      }
+
+      &:last-child {
+        border-bottom-left-radius: $border-radius-base;
+        border-bottom-right-radius: $border-radius-base;
+
+        td {
+          &:first-child {
+            border-bottom-left-radius: $border-radius-base;
+          }
+
+          &:last-child {
+            border-bottom-right-radius: $border-radius-base;
+          }
+        }
+      }      
     }
   }
 }
