--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_view-contact.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_view-contact.scss
@@ -1,6 +1,8 @@
 .page-civicrm-contact-view {
   #crm-container {
     .ui-widget-content {
+      font-family: $font-family-base;
+      
       a.button {
         background: $brand-primary;
         margin-left: 0 !important;
