--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_buttons.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_buttons.scss
@@ -120,7 +120,7 @@ $button-border-radius: 2px;
   .crm-clear-link {
     border: 0 !important;
     color: $gray-dark;
-    margin: 7px 0px !important;
+    margin: 0px !important;
   }
 
   .crm-accordion-header,
