--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_memberships.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_memberships.scss
@@ -59,6 +59,18 @@
             span.btn-slide {
               color: $brand-primary !important;
               text-transform: none;
+
+              &:hover {
+                background: none;
+              }
+
+              a {
+                color: $crm-copy !important;
+
+                &:hover {
+                  background: none;
+                }
+              }
             }
           }
 
