--- a/uk.co.compucorp.civicrm.hrleaveandabsences/css/leaveandabsence.css
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/css/leaveandabsence.css
@@ -1,1 +1,1 @@
-#bootstrap-theme .absence-tab-page .btn-group{margin-bottom:20px !important}
+#bootstrap-theme .absence-tab-page .btn-group{margin-bottom:20px}
