--- a/com.civicrm.hrjobroles/views/modalDialog.html
+++ b/com.civicrm.hrjobroles/views/modalDialog.html
@@ -1,11 +1,18 @@
 <div class="modal-header">
-    <button type="button" class="close" ng-click="cancel()"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-    <h4 class="modal-title">{{title}}</h4>
+  <button type="button" class="close" ng-click="cancel()">
+    <span aria-hidden="true">&times;</span>
+    <span class="sr-only">Close</span>
+  </button>
+  <h2 class="modal-title">{{title}}</h2>
 </div>
 <div class="modal-body">
-    {{msg}}
+  {{msg}}
 </div>
 <div class="modal-footer">
-    <button type="button" class="btn btn-default" ng-click="cancel()">{{copyCancel}}</button>
-    <button type="button" class="btn btn-default" ng-click="confirm()">{{copyConfirm}}</button>
+  <button type="button" class="btn btn-secondary-outline" ng-click="cancel()">
+    {{copyCancel}}
+  </button>
+  <button type="button" class="btn btn-primary" ng-click="confirm()">
+    {{copyConfirm}}
+  </button>
 </div>
