PCHR-1439: Use .btn-icon in main template

--- a/com.civicrm.hrjobroles/views/mainTemplate.html
+++ b/com.civicrm.hrjobroles/views/mainTemplate.html
@@ -30,6 +30,6 @@
   <div ng-include src="jobroles.add_new_role_url"></div>
 </div>
 
-<button class="btn btn-default btn-primary" ng-click="jobroles.add_new_role()" ng-hide="jobroles.add_new">
-  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add new job role
+<button class="btn btn-primary" ng-click="jobroles.add_new_role()" ng-hide="jobroles.add_new">
+  <span class="btn-icon"><i class="fa fa-plus"></i></span> Add new job role
 </button>
