AI-90: Fix manage tags issues

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/_variables.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/_variables.scss
@@ -16,6 +16,7 @@ $crm-input-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.2) inset;
 
 $crm-black-olive-color: #3E3E3E;
 $crm-blue-light: #58b7d1;
+$crm-blue-light-color: #5897FB;
 $crm-cancel-color: #555;
 $crm-green-color: #B0D730;
 $crm-light-green-color: #F1F8EB;
