--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_base.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_base.scss
@@ -46,6 +46,35 @@
       }
     }
   }
+
+  .select2-container {
+    .select2-choice {
+      background: $crm-white;
+      border-color: $crm-darker-grayblue;
+      border-radius: $border-radius-base;
+
+      .select2-arrow {
+        background: $crm-white;
+        padding: 0 4px;
+
+        b {
+          height: 18px;
+          margin-top: 2px;
+        }
+      }
+    }
+
+    &.select2-dropdown-open {
+      .select2-choice {
+        border-color: $brand-primary;
+      }
+
+      &.select2-drop-above .select2-choice {
+        border-color: $crm-blue-light-color;
+        border-top: none;
+      }
+    }
+  }
 }
 
 .page-civicrm {
