--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_memberships.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_memberships.scss
@@ -100,6 +100,7 @@
     border: 1px solid $crm-green-color;
     border-radius: $border-radius-child;
     margin-bottom: 20px;
+    white-space: normal;
   }
 
   .ui-widget-content {
